# judicial-search-tool

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  SEARCH_REDESIGN.md  pyproject.toml  schema.sql
mcp-taiwan-legal-db/: .gitignore  CITATION.cff  DATA_LICENSE  README.en.md  README.md  SOURCES.md  pyproject.toml
mcp-taiwan-legal-db/mcp_server/: config.py  server.py
mcp-taiwan-legal-db/mcp_server/data/: new_cases.json  pcode_all.json
mcp-taiwan-legal-db/mcp_server/parsers/: interpretation_parser.py  judicial_parser.py
mcp-taiwan-legal-db/mcp_server/tests/: test_interpretation_parser.py
mcp-taiwan-legal-db/mcp_server/tools/: constitutional_court.py  judicial_doc.py  judicial_search.py  waf_bypass.py
src/: main.py  mcp_client.py  sse_bus.py
src/api/: analyses.py  cases.py  expansion.py  judgments.py  stream.py  tasks.py  workers.py
src/data/: law_abbreviations.json  synonym_seed.json
src/db/: database.py
src/pipeline/: analyze.py  citation_extractor.py  citation_normalizer.py  cons_normalizer.py  filter.py  pdf_generator.py  search.py  strategy.py  synonym_expander.py
src/ui/static/: index.html  styles.css
src/ui/static/js/: app.js  core.js  init.js
src/utils/: anomaly_log.py  excerpt_anomaly_log.py  json_parse.py  rate_limiter.py  retry.py
src/worker/: runner.py
tests/: inspect_anomalies.py  inspect_tpaa_html.py  regenerate_fixtures.py  test_abort_resume_finalize.py  test_analyze.py  test_anomaly_log.py  test_citation.py  test_cons_normalizer.py  test_cross_task_cache.py  test_excerpt_anomaly_log.py  test_filter.py  test_judgment_structure_regression.py  test_narrow_tier.py  test_or_parsing.py  test_outline_break_patterns.py  test_parallel_dispatch.py  test_strategy.py  test_worker.py  validate_5_judgments.py  verify_outline_break_fix.py
tests/fixtures/: tcba_106_su_93.json  tcba_107_su_geng_yi_17.json  tpaa_110_shang_74.json  tpdv_103_jian_401.json  tphv_104_jian_shang_98.json
tools/: AppIcon.icns  build_app.sh  make_icon.py  monitor_window.py  server_monitor.py  啟動 Monitor.command
